--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-    "version": "0.1",
+    "version": "1.0.0",
     "name": "clovelced-plugin-audiomanagement",
     "cordova_name": "Audio management plugin",
     "description": "A plugin to manage audio mode and volume",
     "license": "Apache 2.0",
     "repo": "https://github.com/clovelCed/cordova-plugin-audiomanagement",
     "issue": "https://github.com/clovelCed/cordova-plugin-audiomanagement/issues",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/clovelCed/cordova-plugin-audiomanagement"
+    },
     "keywords": [
         "cordova",
         "device",
@@ -14,9 +18,8 @@
         "vibrate"
     ],
     "platforms": [
-        "android",
+        "android"
     ],
-    "engines": [],
     "englishdoc": "",
     "author": "Cédric CLOVEL"
 }
